--- a/MapImageEngine/plugin.yml
+++ b/MapImageEngine/plugin.yml
@@ -3,7 +3,7 @@ main: FaigerSYS\MapImageEngine\MapImageEngine
 version: "1.1.1"
 api: ["3.0.0", "4.0.0"]
 load: POSTWORLD
-author: FaigerSYS
+author: FaigerSYS + SuperAdam46
 description: "Image engine for MC:BE servers"
 
 permissions:
